| Bug #8022 | mysql crashes on nested row | ||
|---|---|---|---|
| Submitted: | 19 Jan 2005 22:31 | Modified: | 4 Feb 2005 21:57 |
| Reporter: | Martin Friebe (Gold Quality Contributor) (SCA) | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.1.9/BK Source 4.1.10 | OS: | FreeBSD (freebsd) |
| Assigned to: | Bugs System | Target Version: | |
[19 Jan 2005 22:31]
Martin Friebe
[19 Jan 2005 23:00]
Miguel Solorzano
Thank you for the bug report I was able to repeat on Slackware BK source.
[24 Jan 2005 14:59]
Oleksandr Byelkin
ChangeSet 1.2165 05/01/24 15:56:57 bell@sanja.is.com.ua +3 -0 check that row elements have the same dimention that SELECT list elements in comporison between rows and subqueries added (BUG#8022)
[1 Feb 2005 13:04]
Oleksandr Byelkin
Thank you for bugreport. Bugfix is pushed into 4.1.10 (5.0.3) source repository
[4 Feb 2005 21:57]
Paul DuBois
Mentioned in 4.1.10 and 5.0.3 change notes.
