check that row elements have the same dimention that SELECT list elements in comporison between rows and subqueries added (BUG#8022)